--- a/.hintrc
+++ b/.hintrc
@@ -11,5 +11,11 @@
         ]
       }
     ]
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not ie 11",
+    "not ios_saf <= 14.4",
+    "not safari <= 13.1"
+  ]
 }
