--- a/.hintrc
+++ b/.hintrc
@@ -11,7 +11,8 @@
         ]
       }
     ],
-    "manifest-is-valid": "off"
+    "manifest-is-valid": "off",
+    "compat-api/html": "off"
   },
   "browserslist": [
     "defaults",
