--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,4 @@
 {
-    "editor.tabSize": 2,
-    "cSpell.words": [
-        "forem"
-    ]
+  "editor.tabSize": 2,
+  "cSpell.words": ["forem", "Gurgaon"]
 }
