feat: Implement Career Coach page with service cards and data
This commit introduces the Career Coach page, featuring service cards that highlight coaching offerings. It includes:

- Updated LinkTree header to reflect "Career Coach" role.
- Added career coach page data with service details and testimonials.
- Created `ServiceCard` component to display coaching services with icons and descriptions.
- Integrated new icons for services.
- Added new words to cSpell config.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,12 @@
 {
   "editor.tabSize": 2,
-  "cSpell.words": ["forem", "Gurgaon", "linktree"]
+  "cSpell.words": [
+    "Chatbubbles",
+    "forem",
+    "Gurgaon",
+    "Kirtaniya",
+    "linktree",
+    "Naukri",
+    "Turbanator"
+  ]
 }
